# blog-app

./: .gitignore
backend/: .env  Cargo.toml
backend/src/: database.rs  error.rs  main.rs
backend/src/model/: post.rs  user.rs
backend/src/routes/: post.rs  user.rs
frontend/: README.md  nuxt.config.js  nuxt.config.ts  package.json  pnpm-lock.yaml
frontend/components/: PostCard.vue
frontend/pages/: index.vue
frontend/styles/: general.scss
