[package]
name = "blog-backend"
authors = ["Jade Nash <jade@lilydev.com>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.htmlf

[dependencies]
actix = "0.13.0"
actix-web = "4.2.1"

serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
derive_more = "0.99.17"
chrono = "0.4.23"

dotenvy = "0.15.6"
sqlx = { version = "0.6.2", features = ["runtime-actix-rustls", "sqlite"] }
thiserror = "1.0.38"
